--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,73 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css");
 
+body {
+  background: rgb(36, 84, 22);
+  background: linear-gradient(
+    0deg,
+    rgba(36, 84, 22, 0.7333333333333334) 19%,
+    rgba(0, 0, 0, 0.9108018207282913) 92%
+  );
+}
+
 img {
   max-width: 100%;
+  height: 453px;
 }
+
+.btn {
+  position: relative;
+  display: inline-block;
+  padding: 6px 12px;
+  font-size: 16px;
+  background-color: #ff6347;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  z-index: 1;
+  transition: background-color 0.2s ease;
+}
+
+.btn:before,
+.btn:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.2s ease;
+  z-index: -1;
+}
+
+.btn:before {
+  background-color: #ffc107;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+
+.btn:after {
+  background-color: #496441;
+  transform: scaleX(1);
+  transform-origin: right;
+}
+
+.btn:hover {
+  background-color: #16a085;
+  color: black;
+}
+
+.btn:hover:before {
+  transform: scaleX(1);
+  transform-origin: right;
+}
+
+.btn:hover:after {
+  transform: scaleX(0);
+  transform-origin: left;
+}
+
+/* Loading animation */
 
 .loading {
   position: fixed;
@@ -27,7 +92,7 @@ img {
   position: absolute;
   left: 8px;
   width: 16px;
-  background: #fffb00;
+  background: #ffc107;
   animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
 }
 .lds-facebook div:nth-child(1) {
